--- a/sandbox/tuner/index.html
+++ b/sandbox/tuner/index.html
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: stretch;
     padding: 20px 10px;
-    max-width: 640px;
+    max-width: 760px;
     margin: 0 auto;
   }
   .panel {
@@ -126,7 +126,7 @@
   }
   .mic-hz-display {
     margin-top: 10px;
-    font-size: clamp(34px, 9vw, 50px);
+    font-size: clamp(38px, 10vw, 56px);
     text-align: center;
   }
   .mic-note-display {
@@ -200,11 +200,11 @@
     min-width: 80px;
   }
   .mic-target-note {
-    font-size: clamp(40px, 12vw, 56px);
+    font-size: clamp(44px, 14vw, 64px);
     font-weight: bold;
   }
   .mic-face {
-    font-size: clamp(32px, 10vw, 48px);
+    font-size: clamp(36px, 12vw, 54px);
     margin-top: 4px;
   }
   #tunerNeedle {
@@ -325,9 +325,14 @@ let metroInterval = null;
 let micRunning = false;
 let micStream = null;
 let micSource = null;
+let micHighpass = null;
+let micLowpass = null;
 let micAnalyser = null;
 let micData = null;
 let micAnimId = null;
+let micLastFreq = null;
+let micLastUpdate = 0;
+const MIC_HOLD_MS = 800;
 
 // ==========================
 // Frequency mapping
@@ -760,11 +765,22 @@ async function startMicTuner() {
     return;
   }
 
-  micSource = audioCtx.createMediaStreamSource(micStream);
+    micSource = audioCtx.createMediaStreamSource(micStream);
+  // simple band-pass: highpass + lowpass around violin/voice range
+  micHighpass = audioCtx.createBiquadFilter();
+  micHighpass.type = 'highpass';
+  micHighpass.frequency.value = 80;
+  micLowpass = audioCtx.createBiquadFilter();
+  micLowpass.type = 'lowpass';
+  micLowpass.frequency.value = 2000;
+
   micAnalyser = audioCtx.createAnalyser();
   micAnalyser.fftSize = 2048;
   micData = new Float32Array(micAnalyser.fftSize);
-  micSource.connect(micAnalyser);
+
+  micSource.connect(micHighpass);
+  micHighpass.connect(micLowpass);
+  micLowpass.connect(micAnalyser);
 
   micRunning = true;
   const btn = document.getElementById('micToggle');
@@ -777,17 +793,29 @@ function stopMicTuner() {
   if (!micRunning) return;
   micRunning = false;
   if (micAnimId) cancelAnimationFrame(micAnimId);
-  if (micSource && micAnalyser) {
+    if (micSource) {
     try { micSource.disconnect(); } catch (e) {}
+  }
+  if (micHighpass) {
+    try { micHighpass.disconnect(); } catch (e) {}
+  }
+  if (micLowpass) {
+    try { micLowpass.disconnect(); } catch (e) {}
+  }
+  if (micAnalyser) {
     try { micAnalyser.disconnect(); } catch (e) {}
   }
   if (micStream) {
     micStream.getTracks().forEach(t => t.stop());
   }
-  micStream = null;
+    micStream = null;
   micSource = null;
+  micHighpass = null;
+  micLowpass = null;
   micAnalyser = null;
   micData = null;
+  micLastFreq = null;
+  micLastUpdate = 0;
 
   const btn = document.getElementById('micToggle');
   if (btn) btn.textContent = 'Mic Tuner Start';
@@ -805,11 +833,29 @@ function micLoop() {
     rms += v * v;
   }
   rms = Math.sqrt(rms / micData.length);
+  const now = performance.now();
+
   if (rms < 0.005) {
-    updateMicDisplay(null);
+    // 無音に近い: しばらくは前回の値をホールド
+    if (micLastFreq && now - micLastUpdate < MIC_HOLD_MS) {
+      updateMicDisplay(micLastFreq);
+    } else {
+      updateMicDisplay(null);
+    }
   } else {
     const freq = yin(micData, audioCtx.sampleRate);
-    updateMicDisplay(freq);
+    if (freq) {
+      micLastFreq = freq;
+      micLastUpdate = now;
+      updateMicDisplay(freq);
+    } else {
+      // YIN が null: 直前の値をホールド
+      if (micLastFreq && now - micLastUpdate < MIC_HOLD_MS) {
+        updateMicDisplay(micLastFreq);
+      } else {
+        updateMicDisplay(null);
+      }
+    }
   }
 
   micAnimId = requestAnimationFrame(micLoop);
