--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,6 +16,9 @@
                 <a href="pg/math.html">ぺんこのさんすう</a>
             </li>
             <li>
+                <a href="l-system/index.html">L-system</a>
+            </li>
+            <li>
                 <a href="tuner/index.html">Violin Tune Generator</a>
             </li>
             <li>
